# langchain-graph-advocate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
langchain_graph_advocate/: __init__.py  tool.py
tests/: test_tool.py
